# art-gallery

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
input/: 10klist.txt  input.txt  largeinput.txt
output/: input-bruteforce.txt
src/: Algos.cpp  Algos.h  Painting.cpp  Painting.h  main.cpp
